--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "build": "vite build",
     "start": "vite",
     "lint": "eslint .",
+    "test": "vitest run",
+    "test:watch": "vitest",
     "preview": "vite preview",
     "publish": "npm run build && firebase deploy --only hosting"
   },
@@ -19,6 +21,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.5",
     "styled-components": "^6.1.12",
+    "zod": "^3.23.8",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
@@ -38,6 +41,7 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.2"
+    "vite": "^5.4.2",
+    "vitest": "^2.0.5"
   }
 }
