--- a/.env.development.template
+++ b/.env.development.template
@@ -8,6 +8,8 @@ VITE_FIREBASE_STORAGE_BUCKET=
 VITE_FIREBASE_MESSAGING_SENDER_ID=
 VITE_FIREBASE_APP_ID=
 
+VITE_FILLOUT_ID=
+
 
 VITE_DATA_SOURCE=firebase
 VITE_SUPABASE_URL=https://your-project.supabase.co
