--- a/.env.development.template
+++ b/.env.development.template
@@ -1,6 +1,7 @@
 
-VITE_APP_TITLE=POTS (staging)
 NODE_ENV=development
+
+VITE_APP_TITLE=POTS (staging)
 VITE_FIREBASE_API_KEY=
 VITE_FIREBASE_AUTH_DOMAIN=
 VITE_FIREBASE_PROJECT_ID=
@@ -8,9 +9,8 @@ VITE_FIREBASE_STORAGE_BUCKET=
 VITE_FIREBASE_MESSAGING_SENDER_ID=
 VITE_FIREBASE_APP_ID=
 
+# fillout email
 VITE_FILLOUT_ID=
 
-
-VITE_DATA_SOURCE=firebase
 VITE_SUPABASE_URL=https://your-project.supabase.co
 VITE_SUPABASE_ANON_KEY=your-anon-key
