--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "start": "vite",
-    "lint": "eslint .",
+    "lint": "pnpm eslint . --fix",
     "test": "vitest run",
     "test:watch": "vitest",
     "preview": "vite preview"
