Refactor: Transition from Firebase to Supabase for authentication and data management
- Updated environment variables to include Supabase configurations.
- Replaced Firebase authentication with Supabase's Google OAuth and email/password methods.
- Refactored blog and artwork services to utilize Supabase for CRUD operations.
- Implemented admin-only routes for editing and deleting blog posts and artworks.
- Enhanced the login page to support magic link and password sign-in options.
- Removed Firebase-related files and services, streamlining the codebase for Supabase integration.

--- a/.env.development.template
+++ b/.env.development.template
@@ -14,3 +14,5 @@ VITE_FILLOUT_ID=
 
 VITE_SUPABASE_URL=https://your-project.supabase.co
 VITE_SUPABASE_ANON_KEY=your-anon-key
+
+VITE_LOGGED_IN=true
