feat: add artwork tagging functionality and improve local development support

--- a/.env.development.template
+++ b/.env.development.template
@@ -16,3 +16,4 @@ VITE_SUPABASE_URL=https://your-project.supabase.co
 VITE_SUPABASE_ANON_KEY=your-anon-key
 
 VITE_LOGGED_IN=true
+VITE_SUPABASE_SERVICE_ROLE_KEY=
